/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package com.mycompany.projetochallenge.model.interfaces;

import com.mycompany.projetochallenge.model.SistemaRanqueamento;

/**
 *
 * @author gui
 */


public interface IMecanico extends IUsuario {
    SistemaRanqueamento getSistemaRanqueamento();
    void receberAvaliacao(int nota);
}



